--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,6 +8,6 @@
   <p><strong>Effective Date:</strong> May 8, 2025</p>
   <p>This extension does not collect or transmit any personal data. All transcription happens locally in your browser.</p>
   <p>No user data, no tracking, no storage. You're safe!</p>
-  <p>Questions? Email us at: your-email@example.com</p>
+  <p>Questions? Email us at: mrvcamposjr@example.com</p>
 </body>
 </html>
